<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Orchestra</string>
    <string name="pager_slider1_title">Simplicity</string>
    <string name="pager_slider2_title">Efficiency</string>
    <string name="pager_slider3_title">Clarity</string>
    <string name="pager_slider4_title">Sychronisation</string>
    <string name="pager_slider5_title">Here we go!</string>
    <string name="pager_slider1_text">Manage your home(s) and your connected objects all from the same application and simplify your life</string>
    <string name="pager_slider2_text">Manage your entire home from Orchestra simply and quickly</string>
    <string name="pager_slider3_text">Too many wires? Too many hubs? Too many applications? Too many things to manage your home automation, with Orchestra, get rid of excess, and keep only the essentials</string>
    <string name="pager_slider4_text">Do you decide to change your phone or brand? No worries, reinstall Orchestra on your new device, we\'ll sync everything for you</string>
    <string name="pager_slider5_text">Orchestra, easy and useful home automation</string>
    <string name="pager_content_next">Next</string>
    <string name="title" tools:ignore="DuplicateDefinition" translatable="false">Welcome back to <annotation font="title_login_welcome">Orchestra !</annotation></string>
    <string name="login_welcome">Welcome back to Orchestra !</string>
    <string name="login_email">Email</string>
    <string name="login_pwd">Password</string>
    <string name="login_connect">Connect</string>
    <string name="login_create_account">Create an account</string>
    <string name="login_forgot_pwd">Forgot your password?</string>
    <string name="login_no_account">Do not have an account?</string>
    <string name="create_account_title">Create an account to synchronise all your information</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_email_hint">ex: toto@gmail.com</string>
    <string name="create_account_pwd">Password</string>
    <string name="create_account_pwd_hint">*********</string>
    <string name="create_account_confirm_pwd">Confirm your password</string>
    <string name="create_account_user_name">Name</string>
    <string name="create_account_user_name_hint">John Doe</string>
    <string name="create_account_title_page">Account creation</string>
    <string name="create_account_continue">Continue</string>
    <string name="home_title">My Home</string>
    <string name="home_device_title">My Devices</string>
    <string name="home_scene_title">My Scenes</string>
    <string name="home_device_delete_title">Delete Device</string>
    <string name="home_device_delete_message">Are you sure you want to delete the device ?</string>
    <string name="home_device_delete_button">Delete</string>
    <string name="home_scene_delete_title">Delete Scene</string>
    <string name="home_scene_delete_message">Are you sure you want to delete the scene ?</string>
    <string name="home_scene_delete_button">Delete</string>
    <string name="home_add_new_device">Add a device</string>
    <string name="home_add_new_scene">Add a scene</string>
    <string name="home_add_new_room">Add a room</string>
    <string name="home_add_new_automatisation">Add a automation</string>
    <string name="home_automatisation_alert_create">Create</string>
    <string name="home_automatisation_empty_field_toast">Please fill the field</string>
    <string name="home_automatisation_alert_cancel">Cancel</string>
    <string name="home_room_filter_all">All</string>
    <string name="create_scene_new_scene">New Scene</string>
    <string name="create_scene_name">Name</string>
    <string name="create_scene_name_hint">"Turn on the light at sunset"</string>
    <string name="create_scene_choose_color">Choose a colour</string>
    <string name="create_scene_description">Description</string>
    <string name="create_scene_description_hint">"Turn on the lights if it is dark"</string>
    <string name="create_scene_add_trigger">Add a Trigger</string>
    <string name="create_scene_add_action">+ Add actions</string>
    <string name="create_scene_list_action">Liste of actions</string>
    <string name="create_scene_list_action_description">Choose a device</string>
    <string name="detail_device_ok">OK</string>
    <string name="detail_device_config_text">The device is not supported by Orchestra.\nSend us the device information so that we can integrate it in future updates</string>
    <string name="detail_device_config_button">Send device</string>
    <string name="detail_device_state_text">State</string>
    <string name="detail_device_brightness_text">Brightness</string>
    <string name="detail_device_color_text">Color</string>
    <string name="detail_device_temperature_text">Temperature</string>
    <string name="detail_device_room_title">Room</string>
    <string name="detail_device_specifications_title">Features</string>
    <string name="specification_manufacturer">Manufacturer</string>
    <string name="specification_serial_number">Serial Number</string>
    <string name="specification_model">Model</string>
    <string name="specification_version">Version</string>
    <string name="specification_reachable">Availability</string>
    <string name="reachable_ok">Available</string>
    <string name="reachable_nok">Unavailable</string>
    <string name="detail_scene_modify">Modify</string>
    <string name="detail_scene_description_title">Description</string>
    <string name="detail_scene_action_title">Actions</string>
    <string name="detail_scene_action_unknown_device">Unknown Device</string>
    <string name="detail_scene_action_unknown_action">Unknown Action</string>
    <string name="detail_scene_automation_trigger">Triggered by %1$s when state is %2$s</string>
    <string name="supported_accessories_not_supported_for_this_brand">No device is supported for this brand</string>
    <string name="supported_device_reset_device_title">Attention</string>
    <string name="supported_device_reset_device_message">You need to reset your device</string>
    <string name="supported_device_reset_device_button">Reset</string>
    <string name="create_device_new_device">Add device</string>
    <string name="create_device_name">Name of the device</string>
    <string name="create_device_name_hint">Lightbulb Living Room</string>
    <string name="create_device_which_room">In which room ?</string>
    <string name="create_device_which_room_hint">Living Room</string>
    <string name="create_device_choose_color">Choose a color</string>
    <string name="create_device_is_favoris">Ajouter aux favoris ?</string>
    <string name="device_physical_configuration_title">Follow these steps to configure your object</string>
    <string name="device_physical_configuration_step_one">1. Follow the following link :</string>
    <string name="device_physical_configuration_step_two">2. Go to the section #Pairing</string>
    <string name="device_physical_configuration_step_three">3. Follow the instructions to pair your object</string>
    <string name="search_device_success_title">It\'s done</string>
    <string name="search_device_success_description">Your object has been successfully created !</string>
    <string name="search_device_success_btn">Return to home</string>
    <string name="search_device_error_title">Oops !</string>
    <string name="search_device_error_description">There was a problem when adding device !</string>
    <string name="search_device_error_btn">Retry</string>
    <string name="create_scene_delete_action">Delete</string>
    <string name="create_scene_cancel">Cancel</string>
    <string name="create_scene_add_action_text">Add action</string>
    <string name="create_scene_actions_adapter_error">Error</string>
    <string name="create_scene_actions_adapter_ok">OK</string>
    <string name="create_scene_actions_adapter_cancel">Cancel</string>
    <string name="create_scene_actions_adapter_delete_action">Delete action</string>
    <string name="create_scene_actions_adapter_delete_action_confirmation">Are you sure you want to delete this action ?</string>
    <string name="create_scene_actions_adapter_delete_device">Delete object</string>
    <string name="create_scene_actions_adapter_delete_device_confirmation">Are you sure you want to remove this object from the current scene ?</string>
    <string name="create_scene_actions_adapter_device_state_on">Switch on the device</string>
    <string name="create_scene_actions_adapter_device_state_off">Switch off the device</string>
    <string name="create_scene_actions_adapter_device_state_toggle">Toggle</string>
    <string name="create_scene_actions_adapter_device_brightness_25">Brightness at 25%</string>
    <string name="create_scene_actions_adapter_device_brightness_50">Brightness at 50%</string>
    <string name="create_scene_actions_adapter_device_brightness_75">Brightness at 75%</string>
    <string name="create_scene_actions_adapter_device_brightness_100">Brightness at 100%</string>
    <string name="create_scene_actions_adapter_device_temperature_25">Temperature at 25%</string>
    <string name="create_scene_actions_adapter_device_temperature_50">Temperature at 50%</string>
    <string name="create_scene_actions_adapter_device_temperature_75">Temperature at 75%</string>
    <string name="create_scene_actions_adapter_device_temperature_100">Temperature at 100%</string>
    <string name="create_scene_actions_adapter_choose_color">Choose a color</string>
    <string name="create_scene_actions_adapter_choosen_color">Change color to</string>
    <string name="settings_title">Settings</string>
    <string name="settings_rate_us">Rate us</string>
    <string name="settings_share_the_app">Share the app</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_contact">Contact</string>
    <string name="settings_libraries_we_use">Libraries we use</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_terms_of_use">Terms of use</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_delete_your_account">Delete your account</string>
    <string name="settings_rate_app_impossible">Impossible to find an application for the market</string>
    <string name="settings_share_app_text">Sign out</string>
    <string name="settings_share_app_title">Share To:</string>
    <string name="settings_sign_out_alert_title">Deconnexion</string>
    <string name="settings_sign_out_alert_message">Are you sure you want to sign out ?</string>
    <string name="settings_sign_out_alert_cancel">Cancel</string>
    <string name="settings_delete_your_account_alert_title">Delete your account</string>
    <string name="settings_delete_your_account_alert_message">Are you sure you want to delete your account ?</string>
    <string name="settings_delete_your_account_alert_delete">Delete</string>
    <string name="settings_delete_your_account_alert_cancel">Cancel</string>
    <string name="settings_sign_out_alert_sign_out">Sign out</string>
    <string name="create_scene_missing_information_toast">Please fill in the missing information</string>
    <string name="home_automation_title">My automations</string>
    <string name="create_scene_trigger_by">Trigger by</string>
    <string name="create_scene_when">When</string>
    <string name="create_scene_is">Is</string>
    <string name="error_500_INTERNAL_ERROR">An error has occurred\nCheck if your internet connection is activated\nIf the problem persists\nContact the organization</string>
    <string name="error_user">The username or password is incorrect\nTry again</string>
    <string name="cannot_create_automation">You cannot create automation because you do not have a device</string>
    <string name="cannot_create_scene">You cannot create a scene because you do not have a device</string>
</resources>