<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_primary_blue"
    tools:context="view.ui.DevicePhysicalConfigurationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_physical_configuration_title"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textSize="24sp"
        android:text="@string/device_physical_configuration_title"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_physical_configuration_step_one"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textSize="24sp"
        android:text="@string/device_physical_configuration_step_one"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_physical_configuration_step_one_url"
        android:textColor="@color/blue_pwd"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_physical_configuration_step_two"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textSize="24sp"
        android:text="@string/device_physical_configuration_step_two"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/doc_pairing"
        android:background="@drawable/doc_image_shape"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/device_physical_configuration_step_three"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_extra_bold"
        android:textSize="24sp"
        android:text="@string/device_physical_configuration_step_three"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

</LinearLayout>