<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="view.ui.CreateSceneActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_scene_new_scene_tv"
            android:text="@string/create_scene_new_scene"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_scene_name_tv"
            android:text="@string/create_scene_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/create_scene_name_et"
            android:background="@drawable/create_scene_edit_text_shape"
            android:hint="@string/create_scene_name_hint"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_scene_choose_color_tv"
                android:text="@string/create_scene_choose_color"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/create_scene_shuffle_color_iv"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_shuffle"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/create_scene_colors_rv"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_scene_description_tv"
            android:text="@string/create_scene_description"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/create_scene_description_et"
            android:background="@drawable/create_scene_edit_text_shape"
            android:hint="@string/create_scene_description_hint"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/create_scene_trigger_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_scene_add_trigger_tv"
                android:text="Add a Trigger"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/create_scene_add_trigger_et"
                android:background="@drawable/create_scene_edit_text_shape"
                android:hint="@string/create_scene_description_hint"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/white"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_scene_add_action_tv"
            app:layout_constraintTop_toBottomOf="@id/create_scene_description_et"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/create_scene_add_action"
            android:textColor="@color/blue_pwd"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_scene_list_action_rv"
            app:layout_constraintTop_toBottomOf="@+id/create_scene_add_action_tv"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

    </LinearLayout>
</ScrollView>